force-app/main/default/objects/Job_Role__c/fields/Job_Role_Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Job_Role_Mailing_Street__c</fullName>
    <label>Job Role Mailing Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>