force-app/main/default/objects/Job_Role__c/fields/Job_Role_Mailing_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Job_Role_Mailing_Zip_Code__c</fullName>
    <label>Job Role Mailing Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>