force-app/main/default/objects/Job_Role__c/fields/Job_Role_Notes__c.field-meta.xml
<CustomField>
    <fullName>Job_Role_Notes__c</fullName>
    <label>Job Role Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>