force-app/main/default/objects/Job_Role__c/fields/Job_Role_Organization__c.field-meta.xml
<CustomField>
    <fullName>Job_Role_Organization__c</fullName>
    <label>Job Role Organization</label>
    <length>150</length>
    <type>Text</type>
</CustomField>