force-app/main/default/objects/Job_Role__c/fields/Job_Role_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Job_Role_Phone_Number__c</fullName>
    <label>Job Role Phone Number</label>
    <type>Phone</type>
</CustomField>