force-app/main/default/objects/Job_Role__c/fields/Job_Role_Phone_Number_Extension__c.field-meta.xml
<CustomField>
    <fullName>Job_Role_Phone_Number_Extension__c</fullName>
    <label>Job Role Phone Number Extension</label>
    <length>10</length>
    <type>Text</type>
</CustomField>