force-app/main/default/objects/Job_Role__c/fields/Job_Role_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Role_Title__c</fullName>
    <label>Job Role Title</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>