force-app/main/default/objects/Job_Role__c/fields/Job_Role_URL__c.field-meta.xml
<CustomField>
    <fullName>Job_Role_URL__c</fullName>
    <label>Job Role URL</label>
    <type>Url</type>
</CustomField>