force-app/main/default/objects/Job_Role__c/fields/Last_Verification_Date_Tier__c.field-meta.xml
<CustomField>
    <fullName>Last_Verification_Date_Tier__c</fullName>
    <description
  >No. of days tier dependent on the job role&apos;s verified date</description>
    <formula
  >IF(TODAY() - Verification_Date__c &lt;= 90, &quot;01 - 0 - 90 days&quot;,
IF(TODAY() - Verification_Date__c &lt;= 180, &quot;02 - 91 - 180 days&quot;,
IF(TODAY() - Verification_Date__c &lt;= 364, &quot;03 - 180 - 364 days&quot;,
IF(TODAY() - Verification_Date__c &gt;= 365, &quot;04 - 365+ days&quot;,
&quot;Unverified&quot;
))))</formula>
    <inlineHelpText
  >No. of days tier dependent on the job role&apos;s verified date</inlineHelpText>
    <label>Last Verification Date Tier</label>
    <type>Text</type>
</CustomField>