force-app/main/default/objects/Job_Role__c/fields/LinkedIn_Username__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Username__c</fullName>
    <description>Job role&apos;s LinkedIn username</description>
    <inlineHelpText>Job role&apos;s LinkedIn username</inlineHelpText>
    <label>LinkedIn Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>