force-app/main/default/objects/Job_Role__c/fields/Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name__c</fullName>
    <formula>Contact__r.MiddleName</formula>
    <label>Middle Name</label>
    <type>Text</type>
</CustomField>