force-app/main/default/objects/Job_Role__c/fields/Most_Recent_Note__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Note__c</fullName>
    <label>Most Recent Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>