force-app/main/default/objects/Job_Role__c/fields/Most_Recent_Note_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Note_Date__c</fullName>
    <label>Most Recent Note Date</label>
    <type>Date</type>
</CustomField>