force-app/main/default/objects/Job_Role__c/fields/Navigator_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Navigator_Contact_ID__c</fullName>
    <description
  >Unique ID associated with Role provided by Navigator</description>
    <inlineHelpText
  >Unique ID associated with Role provided by Navigator</inlineHelpText>
    <label>Navigator Contact ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>