force-app/main/default/objects/Job_Role__c/fields/Navigator_Quick_Picks__c.field-meta.xml
<CustomField>
    <fullName>Navigator_Quick_Picks__c</fullName>
    <label>Navigator Quick Picks</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01 - Head of IT (CIO)</fullName>
            </value>
            <value>
                <fullName>02 - Deputy Head of IT (Deputy CIO)</fullName>
            </value>
            <value>
                <fullName>03 - Head of IT Security (CISO)</fullName>
            </value>
            <value>
                <fullName>04 - Head of Networks/Telecomunications</fullName>
            </value>
            <value>
                <fullName>05 - Governor</fullName>
            </value>
            <value>
                <fullName>06 - Treasurer</fullName>
            </value>
            <value>
                <fullName>07 - Attorney General</fullName>
            </value>
            <value>
                <fullName>08 - Secretary of State</fullName>
            </value>
            <value>
                <fullName>09 - Mayor</fullName>
            </value>
            <value>
                <fullName>10 - County Manager/County Executive</fullName>
            </value>
            <value>
                <fullName>11 - City Manager</fullName>
            </value>
            <value>
                <fullName>12 - Head of Special District</fullName>
            </value>
            <value>
                <fullName
        >13 - Head of Agency/Dept. (Dept. Director/Top Administrator)</fullName>
                <label
        >13 - Head of Agency/Dept. (Dept. Director/Top Administrator)</label>
            </value>
            <value>
                <fullName
        >14 - Deputy Head of Agency/Department (Dept. Deputy)</fullName>
                <label
        >14 - Deputy Head of Agency/Department (Dept. Deputy)</label>
            </value>
            <value>
                <fullName>15 - Head of Finance</fullName>
            </value>
            <value>
                <fullName>16 - Comptroller/Controller/CFO</fullName>
            </value>
            <value>
                <fullName>17 - Head of Budget</fullName>
            </value>
            <value>
                <fullName>18 - Head of Purchasing</fullName>
            </value>
            <value>
                <fullName>19 - IT Buyer/Purchasing Specialist</fullName>
            </value>
            <value>
                <fullName>20 - Head of State Dept. of Education</fullName>
            </value>
            <value>
                <fullName
        >21 - Head of Public School District (Superintendent)</fullName>
                <label
        >21 - Head of Public School District (Superintendent)</label>
            </value>
            <value>
                <fullName>22 - Head of University System</fullName>
            </value>
            <value>
                <fullName>23 - Head of University (President)</fullName>
            </value>
            <value>
                <fullName>24 - Head of Community College District</fullName>
            </value>
            <value>
                <fullName
        >25 - Head of Community College (2 year Institution)</fullName>
                <label
        >25 - Head of Community College (2 year Institution)</label>
            </value>
            <value>
                <fullName>26 - Head of Curriculum</fullName>
            </value>
            <value>
                <fullName>27 - Head of Online Learning</fullName>
            </value>
            <value>
                <fullName>28 - Head of Instructional Technology</fullName>
            </value>
            <value>
                <fullName>29 - Head of E-Rate (E-Rate Administrator)</fullName>
            </value>
            <value>
                <fullName>30 - E-Rate Technical Contact</fullName>
            </value>
            <value>
                <fullName>31 - Head of Fire Dept.</fullName>
            </value>
            <value>
                <fullName>32 - Head of Police/Sheriff Dept.</fullName>
            </value>
            <value>
                <fullName
        >33 - Head of Emergency MGMT/Homeland Security</fullName>
                <label>33 - Head of Emergency MGMT/Homeland Security</label>
            </value>
            <value>
                <fullName>34 - Head of Other Public Safety Agency</fullName>
            </value>
            <value>
                <fullName>35 - Head of Corrections</fullName>
            </value>
            <value>
                <fullName>50 - Head of Administration</fullName>
            </value>
            <value>
                <fullName>51 - Head of Public Works</fullName>
            </value>
            <value>
                <fullName>52 - State Chief Privacy Officer</fullName>
            </value>
            <value>
                <fullName>53 - State Chief Risk Officer</fullName>
            </value>
            <value>
                <fullName>58 - Head of Innovation</fullName>
            </value>
            <value>
                <fullName>59 - Head of Data</fullName>
            </value>
            <value>
                <fullName>60 - Head of Artificial Intelligence</fullName>
            </value>
            <value>
                <fullName>61 - Chief Technology Officer</fullName>
            </value>
            <value>
                <fullName>Head of Human Resources</fullName>
                <isActive>false</isActive>
                <label>Head of Human Resources</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>