force-app/main/default/objects/Job_Role__c/fields/New_Note__c.field-meta.xml
<CustomField>
    <fullName>New_Note__c</fullName>
    <label>New Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>