force-app/main/default/objects/Job_Role__c/fields/Next_Election_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Election_Date__c</fullName>
    <description>Date of next election</description>
    <inlineHelpText>Date of next election</inlineHelpText>
    <label>Next Election Date</label>
    <length>25</length>
    <type>Text</type>
</CustomField>