force-app/main/default/objects/Job_Role__c/fields/Next_Election_Year__c.field-meta.xml
<CustomField>
    <fullName>Next_Election_Year__c</fullName>
    <description>Year of next election for role</description>
    <inlineHelpText>Year of next election for role</inlineHelpText>
    <label>Next Election Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>