force-app/main/default/objects/Job_Role__c/fields/Primary_Job_Function_Detail__c.field-meta.xml
<CustomField>
    <fullName>Primary_Job_Function_Detail__c</fullName>
    <description
  >The primary role function. Additional roles and job functions can be found in the Secondary Job Function Detail field.</description>
    <inlineHelpText
  >The primary role function. Additional roles and job functions can be found in the Secondary Job Function Detail field.</inlineHelpText>
    <label>Primary Job Function Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Job_Function_Detail</valueSetName>
    </valueSet>
</CustomField>