force-app/main/default/objects/Job_Role__c/fields/Queue_Type__c.field-meta.xml
<CustomField>
    <fullName>Queue_Type__c</fullName>
    <formula>IF ( Target_Role_Nav__c = True, &quot;Excel Project&quot;,
IF ( Target_Role_Digital_Surveys__c , &quot;Excel Project&quot;,
IF ( Target_Role_Governing_Mag__c , &quot;Salesforce Queue&quot;,
IF ( Target_Role_Comm_Dev__c , &quot;Salesforce Queue&quot;,
IF ( Target_Role_DGS__c , &quot;Salesforce Queue&quot;,
IF (  Target_Role_Industry_Insider__c , &quot;Salesforce Queue&quot;,&quot;Salesforce Queue&quot;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Queue Type</label>
    <type>Text</type>
</CustomField>