force-app/main/default/objects/Job_Role__c/fields/Quick_Picks__c.field-meta.xml
<CustomField>
    <fullName>Quick_Picks__c</fullName>
    <label>Quick Picks</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Quick_Picks</valueSetName>
    </valueSet>
</CustomField>