force-app/main/default/objects/Job_Role__c/fields/Reachable__c.field-meta.xml
<CustomField>
    <fullName>Reachable__c</fullName>
    <formula>Contact__r.Reachable_Status__c</formula>
    <label>Reachable</label>
    <type>Text</type>
</CustomField>