force-app/main/default/objects/Job_Role__c/fields/Reader_Number__c.field-meta.xml
<CustomField>
    <fullName>Reader_Number__c</fullName>
    <formula>Contact__r.Reader_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reader Number</label>
    <type>Text</type>
</CustomField>