force-app/main/default/objects/Job_Role__c/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <formula>TEXT(Contact__r.Salutation)</formula>
    <label>Salutation</label>
    <type>Text</type>
</CustomField>