force-app/main/default/objects/Job_Role__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description
  >Month and day of when the elected official is sworn in or the appointed position starts</description>
    <inlineHelpText
  >Month and day of when the elected official is sworn in or the appointed position starts</inlineHelpText>
    <label>Start Date</label>
    <length>25</length>
    <type>Text</type>
</CustomField>