force-app/main/default/objects/Job_Role__c/fields/Start_Year__c.field-meta.xml
<CustomField>
    <fullName>Start_Year__c</fullName>
    <description
  >Year of when elected or appointed official&apos;s started in role</description>
    <inlineHelpText
  >Year of when elected or appointed official&apos;s started in role</inlineHelpText>
    <label>Start Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>