force-app/main/default/objects/Job_Role__c/fields/State_Details__c.field-meta.xml
<CustomField>
    <fullName>State_Details__c</fullName>
    <description
  >Contact function details for state level contacts.</description>
    <inlineHelpText
  >Contact function details for state level contacts.</inlineHelpText>
    <label>Key Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adjutant General</fullName>
            </value>
            <value>
                <fullName>Constitutional Officer</fullName>
            </value>
            <value>
                <fullName>Governor</fullName>
            </value>
            <value>
                <fullName>Governor&apos;s Cabinet Member</fullName>
            </value>
            <value>
                <fullName>Lieutenant Governor</fullName>
            </value>
            <value>
                <fullName>Secretary of State</fullName>
            </value>
            <value>
                <fullName>State Administrative Officer</fullName>
            </value>
            <value>
                <fullName>State Auditor</fullName>
            </value>
            <value>
                <fullName>State Budget Director</fullName>
            </value>
            <value>
                <fullName>State Chief Data Officer</fullName>
            </value>
            <value>
                <fullName>State Chief Financial Officer</fullName>
            </value>
            <value>
                <fullName>State Chief Information Officer</fullName>
            </value>
            <value>
                <fullName>State Chief Technology Officer</fullName>
            </value>
            <value>
                <fullName>Deputy State Chief Information Officer</fullName>
            </value>
            <value>
                <fullName>State Chief Information Security Officer</fullName>
            </value>
            <value>
                <fullName
        >Deputy State Chief Information Security Officer</fullName>
                <label>Deputy State Chief Information Security Officer</label>
            </value>
            <value>
                <fullName>State Child Welfare Head</fullName>
            </value>
            <value>
                <fullName>State Comptroller/Controller</fullName>
            </value>
            <value>
                <fullName>State Health Officer</fullName>
            </value>
            <value>
                <fullName>State Human Resources Officer</fullName>
            </value>
            <value>
                <fullName>State Insurance Commissioner</fullName>
            </value>
            <value>
                <fullName>State Medicaid Director</fullName>
            </value>
            <value>
                <fullName>State Procurement/Purchasing Officer</fullName>
            </value>
            <value>
                <fullName>State Treasurer</fullName>
            </value>
            <value>
                <fullName>State Privacy Officer</fullName>
            </value>
            <value>
                <fullName>State Risk Officer</fullName>
            </value>
            <value>
                <fullName>State Superintendent of Education</fullName>
            </value>
            <value>
                <fullName>State Transportation Director</fullName>
            </value>
            <value>
                <fullName>City Chief Data Officer</fullName>
            </value>
            <value>
                <fullName>City Head</fullName>
            </value>
            <value>
                <fullName>City CIO</fullName>
            </value>
            <value>
                <fullName>City Deputy CIO</fullName>
            </value>
            <value>
                <fullName>City CISO</fullName>
            </value>
            <value>
                <fullName>City CTO</fullName>
            </value>
            <value>
                <fullName>County Chief Data Officer</fullName>
            </value>
            <value>
                <fullName>County Head</fullName>
            </value>
            <value>
                <fullName>County CIO</fullName>
            </value>
            <value>
                <fullName>County Deputy CIO</fullName>
            </value>
            <value>
                <fullName>County CISO</fullName>
            </value>
            <value>
                <fullName>County CTO</fullName>
            </value>
            <value>
                <fullName>Deputy State Privacy Officer</fullName>
                <isActive>false</isActive>
                <label>Deputy State Privacy Officer</label>
            </value>
            <value>
                <fullName>Deputy State Risk Officer</fullName>
                <isActive>false</isActive>
                <label>Deputy State Risk Officer</label>
            </value>
            <value>
                <fullName>State Child Welfare Deputy Head</fullName>
                <isActive>false</isActive>
                <label>State Child Welfare Deputy Head</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>