force-app/main/default/objects/Job_Role__c/fields/Suffix__c.field-meta.xml
<CustomField>
    <fullName>Suffix__c</fullName>
    <formula>Contact__r.Suffix</formula>
    <label>Suffix</label>
    <type>Text</type>
</CustomField>