force-app/main/default/objects/Job_Role__c/fields/Target_Role_Comm_Dev__c.field-meta.xml
<CustomField>
    <fullName>Target_Role_Comm_Dev__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Target Role - Comm Dev</label>
    <type>Checkbox</type>
</CustomField>