force-app/main/default/objects/Job_Role__c/fields/Target_Role_DGS__c.field-meta.xml
<CustomField>
    <fullName>Target_Role_DGS__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >A targeted job role for the GT DGS events and promotions</description>
    <inlineHelpText
  >A targeted job role for the GT DGS events and promotions</inlineHelpText>
    <label>Target Role - DGS</label>
    <type>Checkbox</type>
</CustomField>