force-app/main/default/objects/Job_Role__c/fields/Target_Role_Digital_Surveys__c.field-meta.xml
<CustomField>
    <fullName>Target_Role_Digital_Surveys__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Target Role - Digital Surveys</label>
    <type>Checkbox</type>
</CustomField>