force-app/main/default/objects/Job_Role__c/fields/Target_Role_Edu_Mag__c.field-meta.xml
<CustomField>
    <fullName>Target_Role_Edu_Mag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Target Role - Edu Mag</label>
    <type>Checkbox</type>
</CustomField>