force-app/main/default/objects/Job_Role__c/fields/Target_Role_Governing_Mag__c.field-meta.xml
<CustomField>
    <fullName>Target_Role_Governing_Mag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Target Role - Governing Mag</label>
    <type>Checkbox</type>
</CustomField>