force-app/main/default/objects/Job_Role__c/fields/Target_Role_Industry_Insider__c.field-meta.xml
<CustomField>
    <fullName>Target_Role_Industry_Insider__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Target job role for Industry Insider program</description>
    <inlineHelpText
  >Target job role for Industry Insider program</inlineHelpText>
    <label>Target Role - Industry Insider</label>
    <type>Checkbox</type>
</CustomField>