force-app/main/default/objects/Job_Role__c/fields/Target_Role_Nav__c.field-meta.xml
<CustomField>
    <fullName>Target_Role_Nav__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This job role is a target for Navigator.</description>
    <inlineHelpText>This job role is a target for Navigator.</inlineHelpText>
    <label>Target Role - Nav</label>
    <type>Checkbox</type>
</CustomField>