force-app/main/default/objects/Job_Role__c/fields/Twitter_Handle__c.field-meta.xml
<CustomField>
    <fullName>Twitter_Handle__c</fullName>
    <description>Job role&apos;s twitter handle</description>
    <inlineHelpText>Job role&apos;s twitter handle</inlineHelpText>
    <label>Twitter Handle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>