force-app/main/default/objects/Job_Role__c/fields/Unable_to_Verify__c.field-meta.xml
<CustomField>
    <fullName>Unable_to_Verify__c</fullName>
    <description>Date of review of Job Role that was unverifiable</description>
    <inlineHelpText
  >Date of review of Job Role that was unverifiable</inlineHelpText>
    <label>Unable to Verify</label>
    <type>Date</type>
</CustomField>